--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li>
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
                 </ul>
+                
+                    <p><a href="ProjectSite_1/MainPage_1.html">First Project.</a></p>
+                    <p><a href="ProjectSite_2/MainPage_2.html">Second Project</a></p>
+                
             </div><!--//contact-container-->
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
