Konrad page. fixed

--- a/ProjectSite_3/MainPage_3.html
+++ b/ProjectSite_3/MainPage_3.html
@@ -23,6 +23,7 @@
 <body>
     <div class="myBg">
         <h1 class="text-center">Konrad Zuse</h1>
+        <p class="pTitle"><i>Inventor and computer pioneer.</i></p>
     </div>
     <div class="container">
         <div class="jumbotron">
@@ -32,18 +33,16 @@
                         <img class="img-rounded img-responsive img-thumbnail" src="http://informat444.narod.ru/museum/picture/Zuse_Konrad.jpg">
                     </div>
                     <div class="col-md-6">
+                        <p class="text-center"><span class="glyphicon glyphicon-education"></span>
                         <hr>
-                        <p>Konrad Zuse (German: [ˈkɔnʁat ˈtsuːzə]; 22 June 1910 – 18 December 1995) was a German civil engineer, inventor and computer pioneer. His greatest achievement was the world's first programmable computer; the functional program-controlled Turing-complete Z3 became operational in May 1941. Thanks to this machine and its predecessors, Zuse has often been regarded as the inventor of the modern compute.</p>
+                        <p>Konrad Zuse was a German civil engineer, inventor and computer pioneer. His greatest achievement was the world's first programmable computer; the functional program-controlled Turing-complete Z3 became operational in May 1941. Thanks to this machine and its predecessors, Zuse has often been regarded as the inventor of the modern compute.</p>
                         <hr>
                         <p>
                             <a class="btn btn-primary btn-block btn-lg" href="https://en.wikipedia.org/wiki/Konrad_Zuse" role="button" target="_blank">Go to Wiki</a>
                         </p>
-
                     </div>
-
                 </div>
             </div>
-
         </div>
         <div class="blackDiv"></div>
         <div class="wrap">
@@ -52,7 +51,7 @@
                     <h3 class="text-center">Pre-World War II work and the Z1</h3>
                     <p>
                         <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Zuse_Z1-2.jpg/220px-Zuse_Z1-2.jpg">Born in Berlin, Germany, on 22 June 1910, he moved with his family in 1912 to Braunsberg, East Prussia, where his father was a postal clerk. Zuse attended the Collegium Hosianum in Braunsberg. In 1923, the family moved to Hoyerswerda, where he passed his Abitur in 1928, qualifying him to enter university.</p>
-                    <p>He enrolled in the Technische Hochschule Berlin (now Technical University of Berlin) and explored both engineering and architecture, but found them boring. Zuse then pursued civil engineering, graduating in 1935. For a time, he worked for the Ford Motor Company, using his considerable artistic skills in the design of advertisements.[10] He started work as a design engineer at the Henschel aircraft factory in Schönefeld near Berlin. This required the performance of many routine calculations by hand, which he found mind-numbingly boring, leading him to dream of doing them by machine.
+                    <p>He enrolled in the Technische Hochschule Berlin (now Technical University of Berlin) and explored both engineering and architecture, but found them boring. Zuse then pursued civil engineering, graduating in 1935. For a time, he worked for the Ford Motor Company, using his considerable artistic skills in the design of advertisements. He started work as a design engineer at the Henschel aircraft factory in Schönefeld near Berlin. This required the performance of many routine calculations by hand, which he found mind-numbingly boring, leading him to dream of doing them by machine.
                         <hr width="55%">
                     </p>
                     <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Konrad_Zuse#Pre-World_War_II_work_and_the_Z1" role="button" target="_blank">Learn more...</a>
@@ -60,8 +59,8 @@
                 <div class="col-md-6">
                     <h3 class="text-center">The Z2, Z3, and Z4</h3>
                     <p>
-                        <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/2007-01-20_Gedenktafel_Zuse_Z3.jpg/220px-2007-01-20_Gedenktafel_Zuse_Z3.jpg">Zuse completed his work entirely independently of other leading computer scientists and mathematicians of his day. Between 1936 and 1945, he was in near-total intellectual isolation.[14] In 1939, Zuse was called to military service, where he was given the resources to ultimately build the Z2.[11] In September 1940 Zuse presented the Z2, covering several rooms in the parental flat, to experts of the Deutsche Versuchsanstalt für Luftfahrt (DVL; i.e. German Research Institute for Aviation).[15] The Z2 was a revised version of the Z1 using telephone relays.</p>
-                    <p>The DVL granted research subsidies so that in 1941 Zuse started a company, Zuse Apparatebau (Zuse Apparatus Construction), to manufacture his machines,[16] renting a workshop on the opposite side in Methfesselstraße 7 and stretching through the block to Belle-Alliance Straße 29 (renamed and renumbered as Mehringdamm 84 in 1947).
+                        <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/2007-01-20_Gedenktafel_Zuse_Z3.jpg/220px-2007-01-20_Gedenktafel_Zuse_Z3.jpg">Zuse completed his work entirely independently of other leading computer scientists and mathematicians of his day. Between 1936 and 1945, he was in near-total intellectual isolation. In 1939, Zuse was called to military service, where he was given the resources to ultimately build the Z2. In September 1940 Zuse presented the Z2, covering several rooms in the parental flat, to experts of the Deutsche Versuchsanstalt für Luftfahrt (DVL; i.e. German Research Institute for Aviation). The Z2 was a revised version of the Z1 using telephone relays.</p>
+                    <p>The DVL granted research subsidies so that in 1941 Zuse started a company, Zuse Apparatebau (Zuse Apparatus Construction), to manufacture his machines, renting a workshop on the opposite side in Methfesselstraße 7 and stretching through the block to Belle-Alliance Straße 29 (renamed and renumbered as Mehringdamm 84 in 1947).
                         <hr width="55%">
                     </p>
                     <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Konrad_Zuse#The_Z2.2C_Z3.2C_and_Z4" role="button" target="_blank">Learn more...</a>
@@ -71,19 +70,18 @@
                 <div class="col-md-6">
                     <h3 class="text-center">S1 and S2</h3>
                     <p>
-                        <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/KZuse_denkmal.jpg/220px-KZuse_denkmal.jpg">In 1940, the German government began funding him through the Aerodynamische Versuchsanstalt (AVA, Aerodynamic Research Institute, forerunner of the DLR),[23] which used his work for the production of glide bombs. Zuse built the S1 and S2 computing machines, which were special purpose devices which computed aerodynamic corrections to the wings of radio-controlled flying bombs. The S2 featured an integrated analog-to-digital converter under program control, making it the first process-controlled computer.
+                        <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/KZuse_denkmal.jpg/220px-KZuse_denkmal.jpg">In 1940, the German government began funding him through the Aerodynamische Versuchsanstalt (AVA, Aerodynamic Research Institute, forerunner of the DLR), which used his work for the production of glide bombs. Zuse built the S1 and S2 computing machines, which were special purpose devices which computed aerodynamic corrections to the wings of radio-controlled flying bombs. The S2 featured an integrated analog-to-digital converter under program control, making it the first process-controlled computer.
                     </p>
                     <p>
-                        These machines contributed to the Henschel Werke Hs 293 and Hs 294 guided missiles developed by the German military between 1941 and 1945, which were the precursors to the modern cruise missile.[20][24][25] The circuit design of the S1 was the predecessor of Zuse's Z11.[20] Zuse believed that these machines had been captured by occupying Soviet troops in 1945.
+                        These machines contributed to the Henschel Werke Hs 293 and Hs 294 guided missiles developed by the German military between 1941 and 1945, which were the precursors to the modern cruise missile. The circuit design of the S1 was the predecessor of Zuse's Z11. Zuse believed that these machines had been captured by occupying Soviet troops in 1945.
                         <hr width="55%">
                     </p>
                     <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Konrad_Zuse#S1_and_S2" role="button" target="_blank">Learn more...</a>
-
                 </div>
                 <div class="col-md-6">
                     <h3 class="text-center">Plankalkül</h3>
                     <p>
-                        <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Konrad_Zuse_Denkmal_im_Huenfelder_Stadtpark.JPG/220px-Konrad_Zuse_Denkmal_im_Huenfelder_Stadtpark.JPG">While working on his Z4 computer, Zuse realised that programming in machine code was too complicated. He started working on a PhD thesis[26] containing groundbreaking research years ahead of its time, mainly the first high-level programming language, Plankalkül ("Plan Calculus") and, as an elaborate example program, the first real computer chess engine.[27] After the 1945 Luisenstadt bombing, he flew from Berlin for the rural Allgäu, and, unable to do any hardware development, he continued working on the Plankalkül, eventually publishing some brief excerpts of his thesis in 1948 and 1959; the work in its entirety, however, remained unpublished until 1972. The PhD thesis was submitted at University of Augsburg, but rejected for formal reasons, because Zuse forgot to pay the 400 Mark university enrollment fee. (The rejection did not bother him.[28]) Plankalkül slightly influenced the design of...
+                        <img align="right" class="img-rounded img-responsive img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Konrad_Zuse_Denkmal_im_Huenfelder_Stadtpark.JPG/220px-Konrad_Zuse_Denkmal_im_Huenfelder_Stadtpark.JPG">While working on his Z4 computer, Zuse realised that programming in machine code was too complicated. He started working on a PhD thesis containing groundbreaking research years ahead of its time, mainly the first high-level programming language, Plankalkül ("Plan Calculus") and, as an elaborate example program, the first real computer chess engine. After the 1945 Luisenstadt bombing, he flew from Berlin for the rural Allgäu, and, unable to do any hardware development, he continued working on the Plankalkül, eventually publishing some brief excerpts of his thesis in 1948 and 1959; the work in its entirety, however, remained unpublished until 1972. The PhD thesis was submitted at University of Augsburg, but rejected for formal reasons, because Zuse forgot to pay the 400 Mark university enrollment fee. (The rejection did not bother him.) Plankalkül slightly influenced the design of...
                         <hr width="55%">
                     </p>
                     <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Konrad_Zuse#Plankalk.C3.BCl" role="button" target="_blank">Learn more...</a>
@@ -92,7 +90,9 @@
         </div>
     </div>
     <footer class="text-center">
-        <p>Powered by <a target="_blank" href="https://www.facebook.com/v.dovnich">Viacheslav Dovnich.</a>
+        
+        <p><span class="glyphicon glyphicon-chevron-left"></span>Powered by<a target="_blank" href="https://www.facebook.com/v.dovnich"> Viacheslav Dovnich.</a>
+        <span class="glyphicon glyphicon-chevron-right"></span>
         </p>
         <p class="myP">01001000 01100101 01101100 01101100 01101111 00100000 01010111 01101111 01110010 01101100 01100100</p>
     </footer>
