--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -63,14 +63,14 @@
     <!-- End -->
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-offset-2 col-md-4 col-lg-offset-2 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <section class="secLeft">
-                    <h1>Viacheslav Dovnich</h1>
+                    <h1><i class="fa fa-angle-right" aria-hidden="true"></i> Viacheslav<br><i class="fa fa-angle-right" aria-hidden="true"></i> Dovnich<br><i class="fa fa-terminal" aria-hidden="true"></i> </h1>
                     <h3>Ahuitelnyu Developer!</h3>
                     <img src="photo/vd.jpg" alt="My Photo" class="myPhoto img-thumbnail">
                     <div class="contactInform">
                         <ul>
-                            <li><i class="fa fa-home" aria-hidden="true"></i>Current address: Bydgoszcz 85-120</li>
+                            <li><i class="fa fa-home" aria-hidden="true"></i>Current address: Poland, Bydgoszcz 85-120</li>
                             <li><i class="fa fa-mobile" aria-hidden="true"></i>Mobile phones: +48 883 089 252</li>
                             <li><i class="fa fa-envelope" aria-hidden="true"></i>Emails: v.dovnich@gmail.com</li>
                             <li><i class="fa fa-skype" aria-hidden="true"></i>Skype: v.dovnich</li>
@@ -79,42 +79,47 @@
                             <li><i class="fa fa-linkedin-square" aria-hidden="true"></i>LinkId:</li>
                             <li><i class="fa fa-github" aria-hidden="true"></i>GitHub</li>
                             <li><i class="fa fa-vk" aria-hidden="true"></i>vk</li>
+                            <li><i class="fa fa-google-plus-official" aria-hidden="true"></i>G+</li>
                         </ul>
 
+                        <p><i class="fa fa-toggle-off" aria-hidden="true"></i> Normal mode<br>
+                        <i class="fa fa-toggle-on" aria-hidden="true"></i> Console mode
+                        </p> 
+                   
                     </div>
                 </section>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <section class="secRight">
-                    <h2>Bio/About</h2>
+                    <h2>Bio/About <i class="fa fa-th-large" aria-hidden="true"></i></h2>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nobis ut placeat tenetur explicabo atque consectetur accusantium hic officiis vel eum veniam reiciendis nemo repellendus fugiat amet in dolores exercitationem nostrum deserunt, cupiditate ad? Quos debitis error voluptatibus optio, ad eveniet velit sint quasi consectetur culpa, sed totam accusamus illum corporis quae ut.</p>
                     </div>
-                    <h2>Professional experience <i class="fa fa-industry" aria-hidden="true"></i></h2>
+                    <h2>Professional experience<i class="fa fa-area-chart" aria-hidden="true"></i></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veniam quibusdam fugit dicta nobis nostrum tempora minima enim quam, corporis sint. Earum iste, praesentium fuga dicta quae itaque voluptatem quam, rem adipisci, aspernatur illo molestiae doloribus veniam.</p>
                     <!-- Education section -->
                     <h2>Education <i class="fa fa-graduation-cap" aria-hidden="true"></i></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat odio nostrum error necessitatibus, doloremque perferendis eligendi quas perspiciatis consectetur, dolores possimus iusto quidem impedit fuga rerum cum, velit aperiam repellendus ad. Rerum iure aperiam tempora veniam asperiores, a cumque amet.</p>
-                    <h3>University</h3>
+                    <h3>University <i class="fa fa-paperclip" aria-hidden="true"></i></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nulla, consequuntur hic minus cumque similique provident natus sit, excepturi recusandae, commodi maxime ipsam tenetur cupiditate.</p>
-                    <h3>Self</h3>
+                    <h3>Self <i class="fa fa-bomb" aria-hidden="true"></i></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nobis assumenda eligendi repellendus sunt aliquam quo, doloribus vel, in corporis non veniam, ipsum qui deserunt.</p>
                     <h3>Certificates <i class="fa fa-certificate" aria-hidden="true"></i></h3>
                     <!-- End -->
                     <h2>Computer skills <i class="fa fa-laptop" aria-hidden="true"></i> </h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam recusandae vel debitis voluptas quis fugit necessitatibus consectetur laudantium nulla adipisci cum, ducimus corporis nemo dolorem ut placeat eaque unde temporibus, corrupti ad consequatur quod? Tenetur, molestias, aperiam, velit necessitatibus ut, quasi voluptate cum vero animi tempora assumenda. Voluptatum, vitae, architecto!</p>
-                    <h2>Interests and hobbies</h2>
+                    <h2>Interests and hobbies <i class="fa fa-space-shuttle" aria-hidden="true"></i></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi accusamus cum pariatur ea! Aliquam nemo eum explicabo, eaque pariatur maiores nam odio sit a ipsam quasi libero adipisci nostrum!</p>
-                    <h2>Personal Projects</h2>
+                    <h2>Personal Projects<i class="fa fa-pencil" aria-hidden="true"></i></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus laudantium est ipsam eligendi esse! Necessitatibus repellendus, nihil ab voluptates aut nesciunt voluptas perferendis totam quia consequuntur iste porro velit molestiae, consectetur enim aperiam, officiis corporis a odio adipisci quae? Quia vitae, earum. Ad possimus est sunt nihil dicta iure rerum quidem! Sunt quo eveniet nesciunt fugit et velit a eos!</p>
-                    <h2>I'm recommend</h2>
+                    <h2>I'm recommend <i class="fa fa-list-ul" aria-hidden="true"></i></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, cum suscipit debitis omnis! Necessitatibus deserunt, tempore velit. Quas rem, modi id neque quasi illum cum quae veniam officia accusamus similique veritatis voluptate quidem nisi! In adipisci corporis doloremque blanditiis expedita tempora ex illum maxime voluptate itaque nulla, sint maiores neque, cum nihil quidem, ipsum quo. Voluptate in voluptatem adipisci cum et error ipsum, deleniti sed inventore perferendis, consequuntur enim ad fugit, vel quidem atque aliquam ullam autem!</p>
                 </section>
             </div>
         </div>
     </div>
-    <footer>
-        <p><i class="fa fa-cog" aria-hidden="true"></i>Powered by VD</p>
+    <footer class="container">
+        <p class="text-center"><i class="fa fa-cog" aria-hidden="true"></i>Powered by VD<br><i class="fa fa-terminal" aria-hidden="true"></i></p>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
