--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>VDSnuff Portfolio</title>
+
+    <title>Viacheslav Dovnich Portfolio</title>
     <!-- Fontawesone -->
     <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
     <!-- Bootstrap -->
@@ -34,8 +35,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">&lt;VD&gt;</a>
+
+                <a href="#" class="myBrand"> <i class="fa fa-chevron-left" aria-hidden="true"></i>  <i class="fa fa-leaf" aria-hidden="true"></i>  <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </a>
             </div>
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">About<span class="sr-only">(current)</span></a>
@@ -64,37 +68,73 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                <div class="had"></div>
                 <section class="secLeft">
-                    <h1><i class="fa fa-angle-right" aria-hidden="true"></i> Viacheslav<br><i class="fa fa-angle-right" aria-hidden="true"></i> Dovnich<br><i class="fa fa-terminal" aria-hidden="true"></i> </h1>
-                    <h3>Ahuitelnyu Developer!</h3>
-                    <img src="photo/vd.jpg" alt="My Photo" class="myPhoto img-thumbnail">
+                    <div class="greetings">
+                        <h1><i class="fa fa-angle-right" aria-hidden="true"></i> Hi!<br><i class="fa fa-angle-right" aria-hidden="true"></i> My name is<br><i class="fa fa-angle-right" aria-hidden="true"></i> Viacheslav<br><i class="fa fa-angle-right" aria-hidden="true"></i> And I like <strong>CODE!</strong><br><i class="fa fa-angle-right" aria-hidden="true"></i><strong class="console"> _</strong></h1>
+                    </div>
+                    <!-- <img src="photo/vd.jpg" alt="My Photo" class="myPhoto img-thumbnail">-->
+                    <hr>
                     <div class="contactInform">
                         <ul>
-                            <li><i class="fa fa-home" aria-hidden="true"></i>Current address: Poland, Bydgoszcz 85-120</li>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i>Mobile phones: +48 883 089 252</li>
-                            <li><i class="fa fa-envelope" aria-hidden="true"></i>Emails: v.dovnich@gmail.com</li>
-                            <li><i class="fa fa-skype" aria-hidden="true"></i>Skype: v.dovnich</li>
-                            <li><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook: www.facebook.com/v.dovnich</li>
-
-                            <li><i class="fa fa-linkedin-square" aria-hidden="true"></i>LinkId:</li>
-                            <li><i class="fa fa-github" aria-hidden="true"></i>GitHub</li>
-                            <li><i class="fa fa-vk" aria-hidden="true"></i>vk</li>
-                            <li><i class="fa fa-google-plus-official" aria-hidden="true"></i>G+</li>
+                            <li>
+                                <h3>Now I'm live here:</h3>
+                            </li>
+                            <li> <i class="fa fa-home" aria-hidden="true"></i> Poland, Bydgoszcz
+                            </li>
+                            <li>
+                                <h3> My mobile phone:</h3>
+                            </li>
+                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +48 883 089 252</li>
+                            <li>
+                                <h3>And skype:</h3>
+                            </li>
+                            <li> <i class="fa fa-skype" aria-hidden="true"></i> v.dovnich</li>
+                            <li>
+                                <h3> You can write me here:</h3>
+                            </li>
+                            <li> <i class="fa fa-envelope" aria-hidden="true"></i> v.dovnich@gmail.com</li>
+                            <li>
+                                <h3>Or here:</h3>
+                            </li>
+                            <li><i class="fa fa-facebook-official" aria-hidden="true"></i>facebook.com/v.dovnich</li>
                         </ul>
 
-                        <p><i class="fa fa-toggle-off" aria-hidden="true"></i> Normal mode<br>
+                        <h3>Also, you can find me there:</h3>
+
+                        <div class="social"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                        </div>
+                        <div class="social"> <i class="fa fa-github" aria-hidden="true"></i>
+                        </div>
+                        <div class="social"> <i class="fa fa-vk" aria-hidden="true"></i>
+                        </div>
+                        <div class="social"> <i class="fa fa-google-plus-official" aria-hidden="true"></i>
+                        </div>
+
+
+
+                        <hr>I can communicate with you in this languages: English Polish Russian
+
+                        <i class="fa fa-toggle-off" aria-hidden="true"></i> Normal mode
+                        <br>
                         <i class="fa fa-toggle-on" aria-hidden="true"></i> Console mode
-                        </p> 
-                   
                     </div>
                 </section>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <section class="secRight">
-                    <h2>Bio/About <i class="fa fa-th-large" aria-hidden="true"></i></h2>
-                    <div>
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL"></div>
+                            <h3>About</h3>
+                            <div class="mSquareR"><i class="fa fa-th-large" aria-hidden="true"></i>
+                            </div>
+                        </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nobis ut placeat tenetur explicabo atque consectetur accusantium hic officiis vel eum veniam reiciendis nemo repellendus fugiat amet in dolores exercitationem nostrum deserunt, cupiditate ad? Quos debitis error voluptatibus optio, ad eveniet velit sint quasi consectetur culpa, sed totam accusamus illum corporis quae ut.</p>
-                    </div>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
+
+                    </article>
                     <h2>Professional experience<i class="fa fa-area-chart" aria-hidden="true"></i></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veniam quibusdam fugit dicta nobis nostrum tempora minima enim quam, corporis sint. Earum iste, praesentium fuga dicta quae itaque voluptatem quam, rem adipisci, aspernatur illo molestiae doloribus veniam.</p>
                     <!-- Education section -->
@@ -119,7 +159,8 @@
         </div>
     </div>
     <footer class="container">
-        <p class="text-center"><i class="fa fa-cog" aria-hidden="true"></i>Powered by VD<br><i class="fa fa-terminal" aria-hidden="true"></i></p>
+        <p><i class="fa fa-cog" aria-hidden="true"></i> Powered by <em>Viacheslav Dovnich.</em>
+        </p>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
