--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -25,44 +25,35 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+    <nav class="myNav">
+        <div class="">
+            <a href="#" class="myBrand">
+                <i class="fa fa-chevron-left" aria-hidden="true"></i><i class="fa fa-leaf" aria-hidden="true"></i><i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </a>
+
+
+            <div class="dropdown">
+                <button class="dropbtn"> <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
-                <a href="#" class="myBrand"> <i class="fa fa-chevron-left" aria-hidden="true"></i>  <i class="fa fa-leaf" aria-hidden="true"></i>  <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </a>
+                <div class="dropdown-content">
+                    <a href="#">About</a>
+                    <a href="#">Professional experience</a>
+                    <a href="#">Computer skills</a>
+                    <a href="#">Education</a>
+                    <a href="#">Computer skills</a>
+                    <a href="#">Interests and hobbies</a>
+                    <a href="#">Personal Projects</a>
+                    <a href="#">I'm recommend</a>
+                </div>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">About<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li><a href="#">Professional experience</a>
-                    </li>
-                    <li><a href="#">Computer skills</a>
-                    </li>
-                    <li><a href="#">Education</a>
-                    </li>
-                    <li><a href="#">Computer skills</a>
-                    </li>
-                    <li><a href="#">Interests and hobbies</a>
-                    </li>
-                    <li><a href="#">Personal Projects</a>
-                    </li>
-                    <li><a href="#">I'm recommend</a>
-                    </li>
-                </ul>
+            <div class="currentPosition">
+                <p>About</p>
             </div>
-            <!-- /.navbar-collapse -->
+
         </div>
-        <!-- /.container-fluid -->
     </nav>
     <!-- End -->
+
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -118,92 +109,113 @@
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <section class="secRight">
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>About</h3>
-                        </div>
 
-                        <div class="mSquareR">
-                            <img src="img/info.png">
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nobis ut placeat tenetur explicabo atque consectetur accusantium hic officiis vel eum veniam reiciendis nemo repellendus fugiat amet in dolores exercitationem nostrum deserunt, cupiditate ad? Quos debitis error voluptatibus optio, ad eveniet velit sint quasi consectetur culpa, sed totam accusamus illum corporis quae ut.</p>
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>Professional_experience</h3>
-                        </div>
-                        <div class="mSquareR">
-                            <img src="img/quarter.png">
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veniam quibusdam fugit dicta nobis nostrum tempora minima enim quam, corporis sint. Earum iste, praesentium fuga dicta quae itaque voluptatem quam, rem adipisci, aspernatur illo molestiae doloribus veniam.</p>
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>About</h3>
+                            </div>
 
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
-                    <!-- Education section -->
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>Education</h3>
+                            <div class="mSquareR">
+                                <img src="img/info.png" alt="info">
+                            </div>
                         </div>
-                        <div class="mSquareR">
-                            <img src="img/graduate-cap.png">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nobis ut placeat tenetur explicabo atque consectetur accusantium hic officiis vel eum veniam reiciendis nemo repellendus fugiat amet in dolores exercitationem nostrum deserunt, cupiditate ad? Quos debitis error voluptatibus optio, ad eveniet velit sint quasi consectetur culpa, sed totam accusamus illum corporis quae ut.</p>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat odio nostrum error necessitatibus, doloremque perferendis eligendi quas perspiciatis consectetur, dolores possimus iusto quidem impedit fuga rerum cum, velit aperiam repellendus ad. Rerum iure aperiam tempora veniam asperiores, a cumque amet.</p>
-                    <h4>University <i class="fa fa-paperclip" aria-hidden="true"></i></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nulla, consequuntur hic minus cumque similique provident natus sit, excepturi recusandae, commodi maxime ipsam tenetur cupiditate.</p>
-                    <h4>Self <i class="fa fa-bomb" aria-hidden="true"></i></h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nobis assumenda eligendi repellendus sunt aliquam quo, doloribus vel, in corporis non veniam, ipsum qui deserunt.</p>
-                    <h4>Certificates <i class="fa fa-certificate" aria-hidden="true"></i></h4>
-                    <!-- End -->
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>Computer_skills</h3>
+                    </article>
+
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>Professional_experience</h3>
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/quarter.png" alt="quarter">
+                            </div>
                         </div>
-                        <div class="mSquareR">
-                            <img src="img/laptop-icon.png">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt veniam quibusdam fugit dicta nobis nostrum tempora minima enim quam, corporis sint. Earum iste, praesentium fuga dicta quae itaque voluptatem quam, rem adipisci, aspernatur illo molestiae doloribus veniam.</p>
+
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam recusandae vel debitis voluptas quis fugit necessitatibus consectetur laudantium nulla adipisci cum, ducimus corporis nemo dolorem ut placeat eaque unde temporibus, corrupti ad consequatur quod? Tenetur, molestias, aperiam, velit necessitatibus ut, quasi voluptate cum vero animi tempora assumenda. Voluptatum, vitae, architecto!</p>
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>Interests_and_hobbies</h3>
+                    </article>
+
+                    <article>
+                        <!-- Education section -->
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>Education</h3>
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/graduate-cap.png" alt="graduate-cap">
+                            </div>
                         </div>
-                        <div class="mSquareR">
-                            <img src="img/rocket-black-shape.png">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat odio nostrum error necessitatibus, doloremque perferendis eligendi quas perspiciatis consectetur, dolores possimus iusto quidem impedit fuga rerum cum, velit aperiam repellendus ad. Rerum iure aperiam tempora veniam asperiores, a cumque amet.</p>
+                        <h4>University <i class="fa fa-paperclip" aria-hidden="true"></i></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nulla, consequuntur hic minus cumque similique provident natus sit, excepturi recusandae, commodi maxime ipsam tenetur cupiditate.</p>
+                        <h4>Self <i class="fa fa-bomb" aria-hidden="true"></i></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nobis assumenda eligendi repellendus sunt aliquam quo, doloribus vel, in corporis non veniam, ipsum qui deserunt.</p>
+                        <h4>Certificates <i class="fa fa-certificate" aria-hidden="true"></i></h4>
+                        <!-- End -->
+                    </article>
+
+                    <article>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi accusamus cum pariatur ea! Aliquam nemo eum explicabo, eaque pariatur maiores nam odio sit a ipsam quasi libero adipisci nostrum!</p>
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>Personal_projects</h3>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>Computer_skills</h3>
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/laptop-icon.png" alt="laptop-icon">
+                            </div>
                         </div>
-                        <div class="mSquareR">
-                            <img src="img/user-silhouette.png">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam recusandae vel debitis voluptas quis fugit necessitatibus consectetur laudantium nulla adipisci cum, ducimus corporis nemo dolorem ut placeat eaque unde temporibus, corrupti ad consequatur quod? Tenetur, molestias, aperiam, velit necessitatibus ut, quasi voluptate cum vero animi tempora assumenda. Voluptatum, vitae, architecto!</p>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus laudantium est ipsam eligendi esse! Necessitatibus repellendus, nihil ab voluptates aut nesciunt voluptas perferendis totam quia consequuntur iste porro velit molestiae, consectetur enim aperiam, officiis corporis a odio adipisci quae? Quia vitae, earum. Ad possimus est sunt nihil dicta iure rerum quidem! Sunt quo eveniet nesciunt fugit et velit a eos!</p>
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="redLine">
-                        <div class="mSquareL">
-                            <h3>I'm_recommend</h3>
+                    </article>
+
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>Interests_and_hobbies</h3>
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/rocket-black-shape.png" alt="rocket-black-shape">
+                            </div>
                         </div>
-                        <div class="mSquareR">
-                            <img src="img/thumb-up-filled-gesture.png">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quasi accusamus cum pariatur ea! Aliquam nemo eum explicabo, eaque pariatur maiores nam odio sit a ipsam quasi libero adipisci nostrum!</p>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
                         </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, cum suscipit debitis omnis! Necessitatibus deserunt, tempore velit. Quas rem, modi id neque quasi illum cum quae veniam officia accusamus similique veritatis voluptate quidem nisi! In adipisci corporis doloremque blanditiis expedita tempora ex illum maxime voluptate itaque nulla, sint maiores neque, cum nihil quidem, ipsum quo. Voluptate in voluptatem adipisci cum et error ipsum, deleniti sed inventore perferendis, consequuntur enim ad fugit, vel quidem atque aliquam ullam autem!</p>
-                    <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </div>
+                    </article>
+
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>Personal_projects</h3>
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/user-silhouette.png" alt="user-silhouette">
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus laudantium est ipsam eligendi esse! Necessitatibus repellendus, nihil ab voluptates aut nesciunt voluptas perferendis totam quia consequuntur iste porro velit molestiae, consectetur enim aperiam, officiis corporis a odio adipisci quae? Quia vitae, earum. Ad possimus est sunt nihil dicta iure rerum quidem! Sunt quo eveniet nesciunt fugit et velit a eos!</p>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div class="redLine">
+                            <div class="mSquareL">
+                                <h3>I'm_recommend</h3>
+                            </div>
+                            <div class="mSquareR">
+                                <img src="img/thumb-up-filled-gesture.png" alt="thumb-up-filled-gesture">
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, cum suscipit debitis omnis! Necessitatibus deserunt, tempore velit. Quas rem, modi id neque quasi illum cum quae veniam officia accusamus similique veritatis voluptate quidem nisi! In adipisci corporis doloremque blanditiis expedita tempora ex illum maxime voluptate itaque nulla, sint maiores neque, cum nihil quidem, ipsum quo. Voluptate in voluptatem adipisci cum et error ipsum, deleniti sed inventore perferendis, consequuntur enim ad fugit, vel quidem atque aliquam ullam autem!</p>
+                        <div class="downArrow"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        </div>
+                    </article>
                 </section>
             </div>
         </div>
