--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="currentPosition">
-                <p>About</p>
+                <p><i class="fa fa-angle-right" aria-hidden="true" style="color:orange; font-size:18px;"></i> About</p>
             </div>
 
         </div>
