--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -30,8 +30,6 @@
             <a href="#" class="myBrand">
                 <i class="fa fa-chevron-left" aria-hidden="true"></i><i class="fa fa-leaf" aria-hidden="true"></i><i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
-
-
             <div class="dropdown">
                 <button class="dropbtn"> <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
@@ -47,7 +45,8 @@
                 </div>
             </div>
             <div class="currentPosition">
-                <p><i class="fa fa-angle-right" aria-hidden="true" style="color:orange; font-size:18px;"></i> About</p>
+                <p><i class="fa fa-angle-right" aria-hidden="true" style="color:orange; font-size:18px;"></i>  <span> About</span>
+                </p>
             </div>
 
         </div>
@@ -57,7 +56,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                <div class="had"></div>
+                <div class="topLine"></div>
                 <section class="secLeft">
                     <div class="greetings">
                         <h1><i class="fa fa-angle-right" aria-hidden="true"></i> Hi!<br><i class="fa fa-angle-right" aria-hidden="true"></i> My name is<br><i class="fa fa-angle-right" aria-hidden="true"></i> Viacheslav<br><i class="fa fa-angle-right" aria-hidden="true"></i> And I like <strong><br id="brNone"><i id="iNone" class="fa fa-angle-right" aria-hidden="true"></i> CODE!</strong><br><i class="fa fa-angle-right" aria-hidden="true"></i><strong class="console"> _</strong></h1>
@@ -65,45 +64,55 @@
                     <!-- <img src="photo/vd.jpg" alt="My Photo" class="myPhoto img-thumbnail">-->
                     <hr>
                     <div class="contactInform">
-                        <ul>
-                            <li>
-                                <h2>Now I'm live here:</h2>
-                            </li>
-                            <li> <i class="fa fa-home" aria-hidden="true"></i> Poland, Bydgoszcz
-                            </li>
-                            <li>
-                                <h2> My mobile phone:</h2>
-                            </li>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +48 883 089 252</li>
-                            <li>
-                                <h2>And skype:</h2>
-                            </li>
-                            <li> <i class="fa fa-skype" aria-hidden="true"></i> v.dovnich</li>
-                            <li>
-                                <h2> You can write me here:</h2>
-                            </li>
-                            <li> <i class="fa fa-envelope" aria-hidden="true"></i> v.dovnich@gmail.com</li>
-                            <li>
-                                <h2>Or here:</h2>
-                            </li>
-                            <li><i class="fa fa-facebook-official" aria-hidden="true"></i>facebook.com/v.dovnich</li>
-                        </ul>
-                        <h2>Also, you can find me there:</h2>
-                        <div class="social"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+
+                        <h2 class="hiddenH">My contact information:</h2>
+                        <div class="contactInf">
+                            <h2>Now I'm live here:</h2>
+                            <p><span class="iconSize"><i class="fa fa-home" aria-hidden="true"></i></span>Poland, Bydgoszcz</p>
                         </div>
-                        <div class="social"> <i class="fa fa-github" aria-hidden="true"></i>
+
+                        <div class="contactInf">
+                            <h2> My mobile phone:</h2>
+                            <p><span class="iconSize"><i class="fa fa-mobile" aria-hidden="true"></i></span>+48 883 089 252</p>
                         </div>
-                        <div class="social"> <i class="fa fa-vk" aria-hidden="true"></i>
+
+                        <div class="contactInf">
+                            <h2>And skype:</h2>
+                            <p><span class="iconSize"><i class="fa fa-skype" aria-hidden="true"></i></span>v.dovnich</p>
                         </div>
-                        <div class="social"> <i class="fa fa-google-plus-official" aria-hidden="true"></i>
+
+                        <div class="contactInf">
+                            <h2> You can write me here:</h2>
+                            <p><span class="iconSize"><i class="fa fa-envelope" aria-hidden="true"></i></span> v.dovnich@gmail.com</p>
+                        </div>
+
+                        <div class="contactInf">
+                            <h2>Or here:</h2>
+                            <p><span class="iconSize"><i class="fa fa-facebook-official" aria-hidden="true"></i></span>facebook.com/v.dovnich</p>
+                        </div>
+                        <div class="down">
+                            <h2>Also, you can find me...</h2>
+                            <div class="social"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                            </div>
+                            <div class="social"><i class="fa fa-github" aria-hidden="true"></i>
+                            </div>
+                            <div class="social"><i class="fa fa-vk" aria-hidden="true"></i>
+                            </div>
+                            <div class="social"><i class="fa fa-google-plus-official" aria-hidden="true"></i>
+                            </div>
                         </div>
                         <hr>
-                        <h2>I can communicate with you in this languages:</h2> 
-                        <ul>
-                            <li>English</li>
-                            <li>Polish</li>
-                            <li>Russian</li>
-                        </ul>
+
+                        <h5>I can communicate with you in this languages:</h5> 
+                        <div class="lang">English</div>
+                        <div class="lang">Russian</div>
+                        <div class="lang">Polish</div>
+                        <div class="lang">Ukrainian</div>
+
+                        <hr>
+
+                        <h5>Download pdf version of my CV you can here:</h5>
+                        <span class="glyphicon glyphicon-save" aria-hidden="true"></span> 
                     </div>
                 </section>
             </div>
