h3 font size on different screens size fixed

--- a/04_Project_Portfolio/portfolio.html
+++ b/04_Project_Portfolio/portfolio.html
@@ -160,9 +160,9 @@
                             </div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat odio nostrum error necessitatibus, doloremque perferendis eligendi quas perspiciatis consectetur, dolores possimus iusto quidem impedit fuga rerum cum, velit aperiam repellendus ad. Rerum iure aperiam tempora veniam asperiores, a cumque amet.</p>
-                        <h4>University <i class="fa fa-paperclip" aria-hidden="true"></i></h4>
+                        <h4>University <i class="fa fa-university" aria-hidden="true"></i></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nulla, consequuntur hic minus cumque similique provident natus sit, excepturi recusandae, commodi maxime ipsam tenetur cupiditate.</p>
-                        <h4>Self <i class="fa fa-bomb" aria-hidden="true"></i></h4>
+                        <h4>Self <i class="fa fa-user" aria-hidden="true"></i></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque nobis assumenda eligendi repellendus sunt aliquam quo, doloribus vel, in corporis non veniam, ipsum qui deserunt.</p>
                         <h4>Certificates <i class="fa fa-certificate" aria-hidden="true"></i></h4>
                         <!-- End -->
